DOGE release and address get improvement
Trading pair BTC-DOGE added to the exchange with price history
rounding improvement and restructured funding address generation.
