# pkg/api/api.go
@@ -2,3 +2,4 @@ package api
 
 const AccountPathParamName = "accountID"
 const OrderPathParamName = "orderID"
+const SymbolPathParamName = "symbolName"
