# pkg/api/render.go
@@ -31,3 +31,8 @@ func (b *Transaction) Render(w http.ResponseWriter, r *http.Request) error {
 func (b *TransactionList) Render(w http.ResponseWriter, r *http.Request) error {
 	return nil
 }
+
+// Render implements the render.Renderer interface for use with chi-router
+func (b *AddressItem) Render(w http.ResponseWriter, r *http.Request) error {
+	return nil
+}
